refactor: update test scripts in package.json for consistency and add vite.config.mjs with dynamic import for tsconfig paths

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "filmguide",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage",
+    "test": "vitest --config vite.config.mjs",
+    "test:watch": "vitest --watch --config vite.config.mjs",
+    "test:ui": "vitest --ui --config vite.config.mjs",
+    "coverage": "vitest run --coverage --config vite.config.mjs",
     "format:check": "prettier --check .",
     "format": "prettier --write ."
   },
