--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^9.24.0",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.77.0",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +31,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.2",
+    "import-in-the-middle": "^1.14.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
@@ -37,6 +39,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "require-in-the-middle": "^7.5.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.5"
