--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.12.1"
 }
