--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:ui": "vitest --ui --config vite.config.mjs",
     "coverage": "vitest run --coverage  --config vite.config.mjs",
     "format:check": "prettier --check .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@clerk/elements": "^0.23.29",
@@ -46,8 +48,19 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "4.0.1",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@storybook/addon-controls": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-themes": "^9.0.18",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/nextjs": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@storybook/test-runner": "^0.22.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -56,12 +69,17 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.5.0",
+    "@vitest/browser": "3.1.4",
     "@vitest/coverage-v8": "3.1.4",
     "@vitest/ui": "3.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "eslint-plugin-storybook": "9.0.18",
     "jsdom": "^26.1.0",
+    "playwright": "^1.54.1",
     "prettier": "3.5.3",
+    "storybook": "8.6.14",
+    "storybook-theme-toggle": "^0.1.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5",
